# scrape_for_jobs

./: .gitignore  README.md  pyproject.toml  requirements.txt
scrapyproject/: middlewares.py  settings.py
