[project]
name = "scrapyproject"
version = "0.1.0"
description = ""
authors = [
    {name = "ep1607",email = "eva.pocivavsek.janhar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scrapy (>=2.13.2,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
